# ERLM

./: .gitignore  ERLM.md  THESIS.md
notes/: browsecomp-plus-paper-rlm-details.md  efficient-rlm-replication.md  prologue-environment-trace.md  source-claim-audit.md  verifiers-prime-rl-training-trace.md
rlm/clients/: openai.py
rlm/core/: rlm.py
scripts/: launch_efficient.sh  valar_fetch_datasets.py  valar_full_smoke.py  valar_pilot.sh  valar_run_smoke.sh
thesis/: 00-abstract.md  01-introduction.md  02-background.md  03-objective.md  04-method.md  05-experimental-design.md  06-results.md  07-discussion.md  08-conclusion.md  README.md  references.md
tools/: analyze_pilot.py  upload_prime_rl_lora_adapter.py  validate_prime_rl_wandb_lora.py  validate_rlm_eval_suite.py  validate_thesis_shaping.py  validate_upstream_efficient_config.py
training/configs/: pilot-l0.toml  pilot-l02.toml  rlm-qwen3-30b-efficient-eval-suite.toml  rlm-qwen3-30b-efficient.toml  rlm-qwen3-30b-example.toml  rlm-qwen3-30b-thesis-control.toml  rlm-qwen3-30b-thesis.toml
training/environments/browsecomp_plus/: README.md  pyproject.toml
training/environments/longbench_codeqa/: pyproject.toml
training/environments/oolong/: README.md  pyproject.toml
training/environments/oolong_pairs/: README.md  (+1 more)
training/environments/rlm_eval_suite/: README.md  pyproject.toml
training/environments/rlm_eval_suite/rlm_eval_suite/: __init__.py  browsecomp_plus.py  common.py  envs.py  longbench_codeqa.py  oolong.py
training/tests/: conftest.py  test_efficiency_shaping.py  test_eval_suite_scoring.py
(+12 files in other folders)
