[project]
name = "rlm-eval-suite"
version = "0.1.0"
description = "Source-traced RLM eval/training environments with user prologues from LMxLM and Prime research-environments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rlm-train",
    "verifiers>=0.1.11",
    "datasets>=4.0",
    "python-dateutil",
    "huggingface_hub>=0.23",
]

[tool.uv.sources]
rlm-train = { path = "../..", editable = true }

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rlm_eval_suite"]

[project.entry-points."verifiers.environments"]
rlm-oolong-local = "rlm_eval_suite.oolong:load_oolong_environment"
rlm-oolong-pairs-local = "rlm_eval_suite.oolong:load_oolong_pairs_environment"
rlm-browsecomp-plus-local = "rlm_eval_suite.browsecomp_plus:load_browsecomp_plus_environment"
rlm-longbench-codeqa-local = "rlm_eval_suite.longbench_codeqa:load_longbench_codeqa_environment"
